dev/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-devns-namespace
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow devns Namespace
    policies.kyverno.io/category: ss-custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Kubernetes Namespaces are an optional feature that provide a way to segment and
      isolate cluster resources across multiple applications and users. As a best
      practice, workloads should be isolated with Namespaces. Namespaces should be required
      and the devns (empty) Namespace should not be used. This policy validates that Pods
      specify a Namespace name other than `devns`.      
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: validate-namespace
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Using 'devns' namespace is not allowed."
      pattern:
        metadata:
          namespace: "!devns"
  - name: validate-podcontroller-namespace
    match:
      resources:
        kinds:
        - DaemonSet
        - Deployment
        - Job
        - StatefulSet
    validate:
      message: "Using 'devns' namespace is not allowed for pod controllers."
      pattern:
        metadata:
          namespace: "!devns"
